# server_core

./: .env.example  Cargo.toml  LICENSE
src/: errors.rs  main.rs  tests.rs
src/model/: message.rs  mod.rs  reply.rs  user.rs
src/routes/: mod.rs
src/routes/apk/: get_data.rs  mod.rs  upload.rs
src/routes/logcat/: mod.rs  server.rs
