[package]
name = "adbgui_server"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.0"
dotenv = "0.9.0"
env_logger = "0.8.2"
futures = "0.3.5"
futures-util = { version = "0.3.5", default-features = false }
log = "0.4.0"
serde = "1.0.80"
serde_json = "1.0.13"
uuid = { version = "0.5", features = ["serde", "v4"] }
lazy_static = "1.4.0"
salvo = { version = "0.31.1", default-features = false, features = ["full"] }
tokio = { version = "1.20.1", default-features = false, features = ["macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
once_cell = "1.13.1"
