[package]
name = "adbgui_server"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.24"
futures-util = { version = "0.3.24", default-features = false }
log = "0.4.17"
serde = "1.0.144"
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
salvo = { version = "0.33.2", default-features = false, features = ["full"] }
tokio = { version = "1.21.0", default-features = false, features = ["macros"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
once_cell = "1.14.0"
